# disheaps

./: .gitignore  DOCKER_README.md  README.md  disheap.pb.go  disheap_grpc.pb.go  docker-compose.yml  go.mod  go.sum  spec.md
config/: prometheus.yml
disheap-api/: README.md  go.mod  go.sum
disheap-api/cmd/mock-engine/: main.go
disheap-api/cmd/server/: main.go  signals.go
disheap-api/pkg/auth/: apikey.go  apikey_test.go  hash.go  middleware.go  mock.go  user.go
disheap-api/pkg/client/: client.go  client_test.go  pool.go  retry.go
disheap-api/pkg/config/: config.go  config_test.go  defaults.go  validation.go
disheap-api/pkg/errors/: errors.go
disheap-api/pkg/handlers/: admin.go  data.go  handlers.go  stats.go
disheap-api/pkg/middleware/: auth.go  cors.go  logger.go  ratelimit.go
disheap-api/pkg/server/: health.go  middleware.go  server.go  server_test.go
disheap-engine/: Dockerfile  go.mod  go.sum
disheap-engine/cmd/: main.go
disheap-engine/pkg/coordinator/: coordinator.go  coordinator_extended.go  coordinator_test.go  rebalance.go  routing.go
disheap-engine/pkg/delivery/: README.md  backoff.go  delivery.go  delivery_test.go  dlq.go
disheap-engine/pkg/grpc/: admin.go  data.go  server.go  service.go  streaming.go
disheap-engine/pkg/heap/: entry.go  heap.go  heap_test.go  index.go  scheduler.go  timer_heap.go  timer_test.go
disheap-engine/pkg/idempotent/: cache.go  cleanup.go  deduplicator.go  idempotent_test.go  producer_state.go
disheap-engine/pkg/lease/: manager.go  manager_test.go
disheap-engine/pkg/models/: lease.go  lease_test.go  message.go  message_test.go  partition.go  topic.go  topic_test.go
disheap-engine/pkg/partition/: operations.go  partition.go  partition_test.go
disheap-engine/pkg/raft/: README.md  cluster.go  compaction.go  fsm.go  fsm_test.go  log.go  node.go  node_test.go  recovery.go  recovery_test.go  snapshot.go  transport.go
disheap-engine/pkg/spine/: README.md  candidate.go  errors.go  index.go  selector.go  spine_test.go
disheap-engine/pkg/storage/: badger.go  badger_batch.go  badger_extended.go  badger_partition.go  errors.go  keys.go  storage.go  storage_test.go
disheap-engine/pkg/txn/: README.md  coordinator.go  participant.go  timeout.go  txn_test.go
disheap-frontend/: README.md  package-lock.json  package.json  tailwind.config.js
disheap-frontend/src/: App.tsx  index.css
disheap-frontend/src/auth/: LoginForm.tsx  PrivateRoute.tsx
disheap-frontend/src/components/charts/: AreaChart.tsx  BarChart.tsx  BaseChart.tsx  LineChart.tsx  index.ts  (+2 more)
disheap-frontend/src/store/: app.ts  auth.ts
disheap-python/: Dockerfile  README.md  pyproject.toml  pytest.ini  run_basic_tests.py
disheap-python/disheap/: __init__.py  client.py  config.py  connection.py  consumer.py  exceptions.py  message.py  producer.py  testing.py
disheap-python/disheap/_generated/: __init__.py  disheap_pb2.py  disheap_pb2_grpc.py
disheap-python/examples/: streaming_consumer.py  work_queue.py
disheap-python/scripts/: generate_proto.py
disheap-python/tests/: mock_engine.py  test_async_operations.py  test_async_operations_pytest.py  test_basic.py  test_basic_pytest.py  test_comprehensive_template.py
pkg/lease/: extension.go  manager.go  manager_test.go  timeout.go
proto/: Makefile  buf.gen.yaml  buf.yaml  disheap.proto
scripts/: setup-dev-environment.sh
test_client/: go.mod  main.go  test_minimal_client.go
tests/: README.md
tests/integration/: enqueue_pop_test.py  test_connection.py  test_create_topic.py  test_disconnect_handling.py  test_grpc_methods.py  test_ipv4_grpc.py  test_makeheap.py  test_raft_replication.py  test_simple_grpc.py  test_single_node.py
tests/proto/: disheap_test.go
(+35 files in other folders)
